--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,7 @@
 :source-language: java
 // Project meta
 :name: spring-boot-servlet-inherit-channel
-:version: 0.1.0-SNAPSHOT
+:version: 0.1.0
 :group-id: cz.jirutka.spring
 :artifact-id: {name}
 :gh-name: jirutka/{name}
